--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,5 @@ node_modules/
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# TODO: update the binary name.
-repo-template-go
+# Binary name.
+quietus
